--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 43">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 43c">
                             <path d="M39.561 33.971l-.145.174c-4.774 5.728-11.133 8.884-17.902 8.884-6.77 0-13.128-3.155-17.903-8.884l-.144-.174.034-.223c.922-6.014 4.064-10.845 8.847-13.606l.34-.196.271.284c2.259 2.37 5.297 3.674 8.554 3.674s6.295-1.305 8.554-3.674l.271-.284.34.196c4.783 2.761 7.925 7.592 8.848 13.606l.035.223zM21.514 21.489c5.924 0 10.744-4.82 10.744-10.744C32.258 4.821 27.438 0 21.514 0S10.77 4.821 10.77 10.744s4.82 10.745 10.744 10.745z" /></svg> Mijn NS </a>
                 </li>
 
@@ -66,19 +66,19 @@
                 <header>
                     <img src="images/verwardeman.jpg">
                     <h3>
-                        De verwarde man
+                        De verwarde Eva
                     </h3>
                 </header>
                 <ul>
                     <li>
-                        Lees tijd: 15 Minuten
+                        Lees tijd: 10 Minuten
                     </li>
                     <li>
                         <a href="">Later lezen</a>
                     </li>
                 </ul>
                 <p>
-                    Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
+                    Eefje peefje wonder teefje kleefje deefje kruisel kneefje
                 </p>
                 <footer>
                     <a href="">Lees nu </a>
