--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <path d="M13 41c-1.654 0-3 1.346-3 3s1.346 3 3 3 3-1.346 3-3-1.346-3-3-3zm0 4a1.001 1.001 0 010-2 1.001 1.001 0 010 2zM39 47c1.654 0 3-1.346 3-3s-1.346-3-3-3-3 1.346-3 3 1.346 3 3 3zm0-4a1.001 1.001 0 11-1 1c0-.552.449-1 1-1zM46 29c6.065 0 11-4.935 11-11S52.065 7 46 7s-11 4.935-11 11 4.935 11 11 11zm0-20c4.962 0 9 4.038 9 9s-4.038 9-9 9-9-4.038-9-9 4.038-9 9-9z" /></svg> Plan je reis</a>
                 </li>
                 <li>
-                    <a href=""> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" >
+                    <a href=""> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                             <path d="M20.194 3.46c-4.613-4.613-12.121-4.613-16.734 0-4.612 4.614-4.612 12.121 0 16.735 4.108 4.107 10.506 4.547 15.116 1.34.097.459.319.897.676 1.254l6.718 6.718a2.498 2.498 0 0 0 3.535 0 2.496 2.496 0 0 0 0-3.535l-6.718-6.72a2.5 2.5 0 0 0-1.253-.674c3.209-4.611 2.769-11.008-1.34-15.118zm-2.121 14.614c-3.444 3.444-9.049 3.444-12.492 0-3.442-3.444-3.442-9.048 0-12.492 3.443-3.443 9.048-3.443 12.492 0 3.444 3.444 3.444 9.048 0 12.492z" /></svg> Search </a>
                 </li>
                 <li>
@@ -39,6 +39,18 @@
     </aside>
     -->
     <main>
+        <form>
+            <label>
+                Leestijd
+            </label>
+            <input type="range" name="tijd" min="1" max="15" step="1" id="leestijd">
+            <p id="value">8 minuten</p>
+            <label>
+                search
+            </label>
+            <input type="input">
+            
+        </form>
         <section>
             <article>
                 <header>
@@ -240,4 +252,7 @@
             </li>
         </ul>
     </footer>
-</body></html>
+</body>
+<script type="text/javascript" src="javascript/websiteweb.js"></script>
+    
+</html>
