--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="TopBar">
         <nav>
             <ul>
                 <li>
@@ -31,13 +31,9 @@
 
             </ul>
         </nav>
-        <!-- <img class="HeaderImg" src="images/fietsenstalling.jpg" alt="de fietsenstalling">  -->
+        <img class="HeaderImg" src="images/sprintersnginlandschap.jpg" alt="Een afbeelding van een trein in een landschap">
     </header>
-    <!--
-    <aside>
-     gotta make this !! ====================== 
-    </aside>
-    -->
+    
     <main>
         <form>
             <label>
@@ -101,9 +97,6 @@
                 <ul>
                     <li>
                         Lees tijd: 15 Minuten
-                    </li>
-                    <li>
-                        <a href="">Later lezen</a>
                     </li>
                 </ul>
                 <p>
