lekker gewerkt pik

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             </ul>
         </nav>
-        <img class="HeaderImg" src="images/sprintersnginlandschap.jpg" alt="Een afbeelding van een trein in een landschap">
+        <img class="HeaderImg" src="images/sprintersnginlandschap%20copy.jpg" alt="Een afbeelding van een trein in een landschap">
     </header>
     
     <main>
