--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href="">Lees nu </a>
+                    <a href=""> > Lees nu </a>
                 </footer>
             </article>
             <article>
@@ -138,7 +138,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href="">Lees nu </a>
+                    <a href=""> > Lees nu </a>
                 </footer>
             </article>
             <article>
@@ -157,7 +157,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href="">Lees nu </a>
+                    <a href=""> > Lees nu </a>
                 </footer>
             </article>
             <article>
@@ -176,7 +176,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href="">Lees nu </a>
+                    <a href=""> > Lees nu </a>
                 </footer>
             </article>
             <article>
@@ -195,7 +195,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href="">Lees nu </a>
+                    <a href=""> > Lees nu </a>
                 </footer>
             </article>
             <article>
@@ -214,7 +214,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href="">Lees nu </a>
+                    <a href=""> > Lees nu </a>
                 </footer>
             </article>
         </section>
