--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
                 </p>
                 <footer>
-                    <a href=""> > Lees nu </a>
+                    <a href="detail.html"> > Lees nu </a>
                 </footer>
             </article>
 
