--- a/index.html
+++ b/index.html
@@ -223,22 +223,7 @@
     <footer class="footer">
         <ul>
             <li>
-                bedrijf 1
-            </li>
-            <li>
-                bedrijf 2
-            </li>
-            <li>
-                bedrijf 3
-            </li>
-            <li>
-                bedrijf 4
-            </li>
-            <li>
-                bedrijf 5
-            </li>
-            <li>
-                bedrijf 6
+                Door olaf Bon
             </li>
         </ul>
     </footer>
