--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </li>
                 </ul>
                 <p>
-                    Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
+                    Als je nog niet moe was, wordt je dat wel van dit verhaal. Er zit zelfs een optische illusie in!
                 </p>
                 <footer>
                     <a href="detail.html"> > Lees nu </a>
@@ -117,7 +117,7 @@
                     </li>
                 </ul>
                 <p>
-                    Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
+                    Jij weet alles. Ik weet alles. Wij weten alles. De alwetende verteller zal je vertellen wat je moet weten.
                 </p>
                 <footer>
                     <a href=""> > Lees nu </a>
@@ -144,7 +144,126 @@
             </article>
             <article>
                 <header>
-                    <img src="images/verwardeman.jpg">
+                    <img src="images/haiku.jpg">
+                    <h3>
+                        Haiku
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Haiku.
+                    Een gedicht.
+                    Meestal vrij kort.
+                    kon ik dat maar. 
+                    Jammer.
+                </p>
+                <footer>
+                    <a href=""> > Lees nu </a>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <img src="images/max.jpg">
+                    <h3>
+                        Max Verstappen
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Zo snel als die F-1 auto gaat, gaat dit verhaal ook. Voor je het weet ben je erdoorheen en moet je gauw voor een pitstop.
+                </p>
+                <footer>
+                    <a href=""> > Lees nu </a>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <img src="images/ongeboren.jpg">
+                    <h3>
+                        Ongeboren
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Het perspectief bied vele mogelijkheden en dit is er één van.
+                </p>
+                <footer>
+                    <a href=""> > Lees nu </a>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <img src="images/paranoia.jpg">
+                    <h3>
+                        Paranoia
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Als je onder invloed bent kun je dit verhaal beter niet lezen. Dan loop je niet zo lekker over straat.
+                </p>
+                <footer>
+                    <a href=""> > Lees nu </a>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <img src="images/moe.jpg">
+                    <h3>
+                        Moe
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Als je nog niet moe was, wordt je dat wel van dit verhaal. Er zit zelfs een optische illusie in!
+                </p>
+                <footer>
+                    <a href="detail.html"> > Lees nu </a>
+                </footer>
+            </article>
+
+            <article>
+                <header>
+                    <img src="images/Alwetendeverteller.jpg">
+                    <h3>
+
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Jij weet alles. Ik weet alles. Wij weten alles. De alwetende verteller zal je vertellen wat je moet weten.
+                </p>
+                <footer>
+                    <a href=""> > Lees nu </a>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <img src="images/deverwardeman.jpg">
                     <h3>
                         De verwarde man
                     </h3>
@@ -163,9 +282,9 @@
             </article>
             <article>
                 <header>
-                    <img src="images/verwardeman.jpg">
+                    <img src="images/haiku.jpg">
                     <h3>
-                        De verwarde man
+                        Haiku
                     </h3>
                 </header>
                 <ul>
@@ -174,7 +293,11 @@
                     </li>
                 </ul>
                 <p>
-                    Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
+                    Haiku.
+                    Een gedicht.
+                    Meestal vrij kort.
+                    kon ik dat maar. 
+                    Jammer.
                 </p>
                 <footer>
                     <a href=""> > Lees nu </a>
@@ -182,9 +305,9 @@
             </article>
             <article>
                 <header>
-                    <img src="images/verwardeman.jpg">
+                    <img src="images/max.jpg">
                     <h3>
-                        De verwarde man
+                        Max Verstappen
                     </h3>
                 </header>
                 <ul>
@@ -193,7 +316,7 @@
                     </li>
                 </ul>
                 <p>
-                    Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
+                    Zo snel als die F-1 auto gaat, gaat dit verhaal ook. Voor je het weet ben je erdoorheen en moet je gauw voor een pitstop.
                 </p>
                 <footer>
                     <a href=""> > Lees nu </a>
@@ -201,9 +324,9 @@
             </article>
             <article>
                 <header>
-                    <img src="images/verwardeman.jpg">
+                    <img src="images/ongeboren.jpg">
                     <h3>
-                        De verwarde man
+                        Ongeboren
                     </h3>
                 </header>
                 <ul>
@@ -212,7 +335,26 @@
                     </li>
                 </ul>
                 <p>
-                    Onrustig, dat is de sfeer van dit korte verhaal gemaakt door Molovich. Hij zet zichzelf neer als een verwarde man en het nieuws bericht wat er uit zijn vertoning voort komt.
+                    Het perspectief bied vele mogelijkheden en dit is er één van.
+                </p>
+                <footer>
+                    <a href=""> > Lees nu </a>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <img src="images/paranoia.jpg">
+                    <h3>
+                        Paranoia
+                    </h3>
+                </header>
+                <ul>
+                    <li>
+                        Lees tijd: 15 Minuten
+                    </li>
+                </ul>
+                <p>
+                    Als je onder invloed bent kun je dit verhaal beter niet lezen. Dan loop je niet zo lekker over straat.
                 </p>
                 <footer>
                     <a href=""> > Lees nu </a>
