--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         <h1>
             99 Verhalen
         </h1>
+        <button id="filter">Filter</button>
+        
         <form id="dropdown">
-            <a>Filter</a>
+            
             <label>
                 Search
             </label>
