--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             99 Verhalen
         </h1>
         <button id="filter">Filter</button>
-        
+
         <form id="dropdown">
-            
+
             <label>
                 Search
             </label>
@@ -110,7 +110,7 @@
                 <header>
                     <img src="images/Alwetendeverteller.jpg">
                     <h3>
-
+                        De alwetende verteller
                     </h3>
                 </header>
                 <ul>
@@ -372,6 +372,4 @@
         </ul>
     </footer>
 </body>
-<script type="text/javascript" src="javascript/websiteweb.js"></script>
-
-</html>
+<script type="text/javascript" src="javascript/websiteweb.js"></script></html>
